fix: wrong font-size for title-sm on mobile (#244)
* fix: wrong font-size for title-sm on mobile

* chore: bumped package

--- a/style/elvis/css/elvis.css
+++ b/style/elvis/css/elvis.css
@@ -3616,6 +3616,7 @@ input:focus {
 
 @media (max-width: 767px) {
   .e-modal__content .e-modal__title {
+    font-size: 20px;
     line-height: 24px;
   }
 }
@@ -10537,6 +10538,7 @@ THE SOFTWARE.
 
 @media (max-width: 767px) {
   .e-title-sm {
+    font-size: 20px;
     line-height: 24px;
   }
 }
