--- a/style/elvis/src/variables/typography.scss
+++ b/style/elvis/src/variables/typography.scss
@@ -76,6 +76,7 @@ $typography: (
     family: #{Red Hat Display,
     sans-serif},
     size: #{24px},
+    size-m: #{20px},
     weight: #{700},
     height: #{29px},
     height-m: #{24px},
